--- a/ShellScripts/computeLyonCityEvolution/Cwl/Split/split-single-inputs.yml
+++ b/ShellScripts/computeLyonCityEvolution/Cwl/Split/split-single-inputs.yml
@@ -2,4 +2,4 @@ inputFile:
   class: File
   path: ../Download/junk-output-of_foreach_collect/LYON_1ER_2009/LYON_1ER_BATI_2009.gml
 outputFileName: junk-split.gml
-outputDirName: .
+outputDirName: junk-dir
