gather_scatter_*.cwl now shared with foreach-split.cwl

--- a/ShellScripts/computeLyonCityEvolution/Cwl/Split/foreach-split.yml
+++ b/ShellScripts/computeLyonCityEvolution/Cwl/Split/foreach-split.yml
@@ -3,4 +3,4 @@ inputFiles:
    path: ../Download/junk-output-of_foreach_collect/LYON_1ER_2009/LYON_1ER_BATI_2009.gml 
  - class: File 
    path: ../Download/junk-output-of_foreach_collect/LYON_2EME_2009/LYON_2EME_BATI_2009.gml 
-outputDirName: junkDir
+outputDirName: junk-foreach-split
